@@ -12,6 +12,7 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -39,7 +40,7 @@ public class CategoryService {
 
     public List<CategoryResponse> listCategories(){
         return repository.findAll().stream()
-                .map(CategoryResponse::fromEntity).toList();
+                .map(CategoryResponse::fromEntity).collect(Collectors.toList());
     }
 
     public Category findCategoryById(String categoryId){
